// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`craftingSteps gets the correct crafting steps 1`] = `
Array [
  Object {
    "components": Array [
      Object {
        "id": 4,
        "quantity": 30,
        "type": "Item",
      },
    ],
    "crafts": 15,
    "disciplines": Array [
      "Armorsmith",
    ],
    "hasCraftedComponents": false,
    "id": 7,
    "merchant": undefined,
    "minRating": 400,
    "output": undefined,
    "prerequisites": Array [
      Object {
        "id": 123,
        "type": "Recipe",
      },
    ],
    "quantity": 15,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 7,
        "quantity": 3,
        "type": "Recipe",
      },
    ],
    "crafts": 3,
    "disciplines": Array [],
    "hasCraftedComponents": true,
    "id": 19,
    "merchant": undefined,
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 3,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 19,
        "quantity": 3,
        "type": "Recipe",
      },
    ],
    "crafts": 3,
    "disciplines": Array [],
    "hasCraftedComponents": true,
    "id": 3,
    "merchant": undefined,
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 3,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 7,
        "quantity": 6,
        "type": "Recipe",
      },
    ],
    "crafts": 1,
    "disciplines": Array [],
    "hasCraftedComponents": true,
    "id": 15,
    "merchant": undefined,
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 1,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 7,
        "quantity": 6,
        "type": "Recipe",
      },
      Object {
        "id": 3,
        "quantity": 10,
        "type": "Recipe",
      },
      Object {
        "id": 5,
        "quantity": 4,
        "type": "Recipe",
      },
      Object {
        "id": 15,
        "quantity": 1,
        "type": "Recipe",
      },
      Object {
        "id": 1337,
        "quantity": 1,
        "type": "Recipe",
      },
      Object {
        "id": 1,
        "quantity": 6,
        "type": "Currency",
      },
    ],
    "crafts": 1,
    "disciplines": Array [],
    "hasCraftedComponents": true,
    "id": 1,
    "merchant": undefined,
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 2,
    "type": "Recipe",
  },
]
`;

exports[`craftingSteps gets the correct crafting steps when merging components 1`] = `
Array [
  Object {
    "components": Array [
      Object {
        "id": 6,
        "quantity": 2,
        "type": "Item",
      },
    ],
    "crafts": 2,
    "disciplines": Array [],
    "hasCraftedComponents": false,
    "id": 5,
    "merchant": undefined,
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 2,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 4,
        "quantity": 1,
        "type": "Item",
      },
    ],
    "crafts": 1,
    "disciplines": Array [],
    "hasCraftedComponents": false,
    "id": 3,
    "merchant": undefined,
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 1,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 3,
        "quantity": 2,
        "type": "Recipe",
      },
      Object {
        "id": 5,
        "quantity": 2,
        "type": "Recipe",
      },
    ],
    "crafts": 2,
    "disciplines": Array [],
    "hasCraftedComponents": true,
    "id": 2,
    "merchant": undefined,
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 2,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 2,
        "quantity": 1,
        "type": "Recipe",
      },
      Object {
        "id": 2,
        "quantity": 1,
        "type": "Recipe",
      },
    ],
    "crafts": 1,
    "disciplines": Array [],
    "hasCraftedComponents": true,
    "id": 1,
    "merchant": undefined,
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 1,
    "type": "Recipe",
  },
]
`;

exports[`craftingSteps gets the correct crafting steps with mystic clovers 1`] = `
Array [
  Object {
    "components": Array [
      Object {
        "id": 19,
        "quantity": 250,
        "type": "Currency",
      },
      Object {
        "id": 2,
        "quantity": 10500,
        "type": "Currency",
      },
    ],
    "crafts": 10,
    "disciplines": Array [
      "Merchant",
    ],
    "hasCraftedComponents": false,
    "id": 19925,
    "merchant": Object {
      "locations": Array [
        "Bar",
      ],
      "name": "Foo",
    },
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 10,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 23,
        "quantity": 6,
        "type": "Currency",
      },
    ],
    "crafts": 6,
    "disciplines": Array [
      "Merchant",
    ],
    "hasCraftedComponents": false,
    "id": 20796,
    "merchant": Object {
      "locations": Array [
        "Bar",
      ],
      "name": "Foo",
    },
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 60,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 19925,
        "quantity": 10,
        "type": "Recipe",
      },
      Object {
        "id": 19976,
        "quantity": 10,
        "type": "Item",
      },
      Object {
        "id": 19721,
        "quantity": 10,
        "type": "Item",
      },
      Object {
        "id": 20796,
        "quantity": 60,
        "type": "Recipe",
      },
    ],
    "crafts": 3,
    "disciplines": Array [],
    "hasCraftedComponents": true,
    "id": 19675,
    "merchant": undefined,
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 3,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 4,
        "quantity": 24,
        "type": "Item",
      },
    ],
    "crafts": 12,
    "disciplines": Array [
      "Armorsmith",
    ],
    "hasCraftedComponents": false,
    "id": 7,
    "merchant": undefined,
    "minRating": 400,
    "output": undefined,
    "prerequisites": Array [
      Object {
        "id": 123,
        "type": "Recipe",
      },
    ],
    "quantity": 12,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 19675,
        "quantity": 3,
        "type": "Recipe",
      },
    ],
    "crafts": 3,
    "disciplines": Array [],
    "hasCraftedComponents": true,
    "id": 19,
    "merchant": undefined,
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 3,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 19,
        "quantity": 3,
        "type": "Recipe",
      },
    ],
    "crafts": 3,
    "disciplines": Array [],
    "hasCraftedComponents": true,
    "id": 3,
    "merchant": undefined,
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 3,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 7,
        "quantity": 6,
        "type": "Recipe",
      },
    ],
    "crafts": 1,
    "disciplines": Array [],
    "hasCraftedComponents": true,
    "id": 15,
    "merchant": undefined,
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 1,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 7,
        "quantity": 6,
        "type": "Recipe",
      },
      Object {
        "id": 3,
        "quantity": 10,
        "type": "Recipe",
      },
      Object {
        "id": 5,
        "quantity": 4,
        "type": "Recipe",
      },
      Object {
        "id": 15,
        "quantity": 1,
        "type": "Recipe",
      },
    ],
    "crafts": 1,
    "disciplines": Array [],
    "hasCraftedComponents": true,
    "id": 1,
    "merchant": undefined,
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 2,
    "type": "Recipe",
  },
]
`;

exports[`craftingSteps only sorts merchants to top if they only use currencies 1`] = `
Array [
  Object {
    "components": Array [
      Object {
        "id": 89140,
        "quantity": 250,
        "type": "Item",
      },
    ],
    "crafts": 25,
    "disciplines": Array [
      "Leatherworker",
      "Armorsmith",
      "Tailor",
      "Artificer",
      "Weaponsmith",
      "Scribe",
      "Huntsman",
    ],
    "hasCraftedComponents": false,
    "id": 89271,
    "merchant": undefined,
    "minRating": 0,
    "output": undefined,
    "prerequisites": Array [
      Object {
        "id": 12915,
        "type": "Recipe",
      },
    ],
    "quantity": 25,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 89271,
        "quantity": 25,
        "type": "Recipe",
      },
      Object {
        "id": 2,
        "quantity": 35000,
        "type": "Currency",
      },
    ],
    "crafts": 1,
    "disciplines": Array [
      "Merchant",
    ],
    "hasCraftedComponents": true,
    "id": 91571,
    "merchant": Object {
      "locations": Array [
        "Crafting Station",
      ],
      "name": "Master Artificers",
    },
    "minRating": null,
    "output": undefined,
    "prerequisites": Array [],
    "quantity": 1,
    "type": "Recipe",
  },
]
`;
